# hello-cli

./: README.md
log_hello_cli/: README.md  log.txt  pyproject.toml
log_hello_cli/src/log_hello_cli/: __init__.py  main.py
