[project]
name = "log-hello-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "vivan",email = "tiantahilia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "log_hello_cli", from = "src"}]

[tool.poetry.scripts]
hello = "log_hello_cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
